cmake_minimum_required(VERSION 3.19)
project(Aprendendo_C_Cpp C)

set(CMAKE_C_STANDARD 11)

add_executable(Adivinhacao adivinhacao.c)
add_executable(DesafioMultiplicacao desafioMultiplicacao.c)
add_executable(NumerosFor numerosFor.c)
add_executable(NumerosWhile numerosWhile.c)
add_executable(OlaLinguagem olaLinguagemC.c)
add_executable(SomaDosNumeros somaDosNumeros.c)
add_executable(Tabuada tabuada.c)